cria webapp com streamlit: app.py

--- a/prod.ipynb
+++ b/prod.ipynb
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Criamos um DataFrame com valores aleatórios respeitando os extremos dos dados originais"
+    "Criamos um DataFrame com valores aleatórios respeitando os extremos dos dados originais "
    ]
   },
   {
@@ -273,6 +273,8 @@
     "        'Longtitude': [random.uniform(144.431810,145.526350) for _ in range(100)],\n",
     "        'Propertycount': [random.randint(249,21650) for _ in range(100)], \n",
     "        'Month': [random.randint(1,12) for _ in range(100)]}\n",
+    "\n",
+    "#TODO: substituir os valores manuais por variaveis que dependem da base importada\n",
     "\n",
     "df = pd.DataFrame.from_dict(data)\n",
     "df"
